--- a/test_IF_auto.ipynb
+++ b/test_IF_auto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to fit model: 46.81501388549805\n",
+      "Threshold: 0.3703782247493765\n",
+      "\n",
+      "Training set results:\n",
+      "true anomalies: 17354.0\n",
+      "false anomalies: 22515.0\n",
+      "false normals: 0.0\n",
+      "true normals: 6.0\n",
+      "precision: 0.43527552735207803\n",
+      "recall: 1.0\n",
+      "f1-score: 0.6065393285916502\n",
+      "auroc: 0.8400235398594545\n",
+      "\n",
+      "Time to predict test data: 7.416001796722412\n",
+      "Test set results:\n",
+      "true anomalies: 2994.0\n",
+      "false anomalies: 2536.0\n",
+      "false normals: 0.0\n",
+      "true normals: 0.0\n",
+      "precision: 0.5414104882459313\n",
+      "recall: 1.0\n",
+      "f1-score: 0.7024870952604412\n",
+      "auroc: 0.8445878373099139\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "model = IsolationForest(random_state = None)\n",
-    "#notebook_visual_printout(X_train, X_test, train_labels, test_labels, model)\n",
-    "csv_printout(20, X_train, X_test, train_labels, test_labels, model)"
+    "notebook_visual_printout(X_train, X_test, train_labels, test_labels, model)\n",
+    "#csv_printout(20, X_train, X_test, train_labels, test_labels, model)"
    ]
   },
   {
