--- a/test_SCiF_auto.ipynb
+++ b/test_SCiF_auto.ipynb
@@ -29,9 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = SCIsolationForest(num_hyperplanes_per_split = 10, random_state = None)\n",
-    "notebook_visual_printout(X_train, X_test, train_labels, test_labels, model)\n",
-    "#csv_printout(20, X_train, X_test, train_labels, test_labels, model)"
+    "model = SCIsolationForest(num_hyperplanes_per_split = 10, num_attributes_per_split = 5, random_state = None)\n",
+    "#notebook_visual_printout(X_train, X_test, train_labels, test_labels, model)\n",
+    "csv_printout(40, X_train, X_test, train_labels, test_labels, model)"
    ]
   },
   {
